Refactor and improve coverage